# flutter_mpv

./: .metadata  README.md  pubspec.yaml
example/: .metadata  README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: flutter_mpv.dart
windows/: CMakeLists.txt  flutter_mpv_plugin.cpp  flutter_video_renderer.hpp
windows/include/flutter_mpv/: flutter_mpv_plugin.h
